--- a/practice.html
+++ b/practice.html
@@ -8,8 +8,7 @@
 <body>
     <p> hellloooo </p>
     <h1> 로그인하기 </h1>
-    <h2> 좋아요 누르기 </h2>
-    <h3> 차단하기 </h3>
+    <h3> 로그아웃하기 </h3>
 </body>
 </html>
 
